feat: Implement Phase 2 - Payments, Notifications, and Cash Management

--- a/Backend/.env
+++ b/Backend/.env
@@ -36,6 +36,12 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=true
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/0
 ###< symfony/messenger ###
 
+###> stripe/stripe-php ###
+STRIPE_PUBLIC_KEY=pk_test_placeholder
+STRIPE_SECRET_KEY=sk_test_placeholder
+STRIPE_WEBHOOK_SECRET=whsec_placeholder
+###< stripe/stripe-php ###
+
 ###> symfony/mailer ###
 # MAILER_DSN=null://default
 ###< symfony/mailer ###
