--- a/Backend/.env
+++ b/Backend/.env
@@ -26,7 +26,7 @@ DEFAULT_URI=http://localhost:8000
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
-DATABASE_URL="mysql://root:!ChangeMe!@127.0.0.1:3307/app?serverVersion=11.4.2-MariaDB&charset=utf8mb4"
+DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3307/app?serverVersion=11.4.2-MariaDB&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
