--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,5 +1,8 @@
 {
   "devDependencies": {
+    "@babel/cli": "^7.28.6",
+    "@babel/core": "^7.29.0",
+    "@babel/preset-react": "^7.28.5",
     "@symfony/ux-react": "^2.32.0",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.11",
